--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/appIcon/Banki-Logo.png"
     },
     "plugins": [
       "expo-router",
