--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "formik": "^2.4.6",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.3.2",
     "react": "19.0.0",
@@ -46,7 +47,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
